fixes y ajustes del run_pipeline.sh

--- a/notebooks/eda_feedback_v2.ipynb
+++ b/notebooks/eda_feedback_v2.ipynb
@@ -56,40 +56,234 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13e930b4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "from pgn_utils import load_all_games_from_dir, get_game_hash\n",
-    "from tactical_analysis import detect_tactics_from_game\n",
-    "\n",
-    "for game in load_all_games_from_dir(folder):\n",
-    "    game_hash = get_game_hash(game)\n",
-    "    if game_hash in analyzed:\n",
-    "        continue\n",
-    "\n",
-    "    print(f\"🔍 Analizando táctica: {game.headers.get('White', '?')} vs {game.headers.get('Black', '?')}\")\n",
-    "\n",
-    "    try:\n",
-    "        tags = detect_tactics_from_game(game)\n",
-    "        if tags:\n",
-    "            with open(f\"{output_folder}/{game_hash}.json\", \"w\", encoding=\"utf-8\") as f:\n",
-    "                json.dump(tags, f, ensure_ascii=False, indent=2)\n",
-    "\n",
-    "        # ✅ Guardamos sólo si no hubo excepción\n",
-    "        save_analyzed_hash(game_hash)\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(f\"❌ Error al analizar partida {game_hash} - {game.headers.get('White', '?')} vs {game.headers.get('Black', '?')}: {e}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "ba5bafd9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>move_number</th>\n",
+       "      <th>material_balance</th>\n",
+       "      <th>material_total</th>\n",
+       "      <th>num_pieces</th>\n",
+       "      <th>branching_factor</th>\n",
+       "      <th>self_mobility</th>\n",
+       "      <th>opponent_mobility</th>\n",
+       "      <th>player_color</th>\n",
+       "      <th>has_castling_rights</th>\n",
+       "      <th>move_number_global</th>\n",
+       "      <th>is_repetition</th>\n",
+       "      <th>is_low_mobility</th>\n",
+       "      <th>tags</th>\n",
+       "      <th>score_diff</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>94.00000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>13.978723</td>\n",
+       "      <td>-0.888298</td>\n",
+       "      <td>71.771277</td>\n",
+       "      <td>12.340426</td>\n",
+       "      <td>63.968085</td>\n",
+       "      <td>31.819149</td>\n",
+       "      <td>32.148936</td>\n",
+       "      <td>0.510638</td>\n",
+       "      <td>0.585106</td>\n",
+       "      <td>27.446809</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.06383</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>9.190901</td>\n",
+       "      <td>1.806357</td>\n",
+       "      <td>7.886089</td>\n",
+       "      <td>1.920759</td>\n",
+       "      <td>13.131635</td>\n",
+       "      <td>10.240089</td>\n",
+       "      <td>10.103717</td>\n",
+       "      <td>0.502567</td>\n",
+       "      <td>0.495346</td>\n",
+       "      <td>18.376947</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.24576</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-9.250000</td>\n",
+       "      <td>52.250000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>27.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>6.250000</td>\n",
+       "      <td>-1.250000</td>\n",
+       "      <td>66.500000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>59.000000</td>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>12.250000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>-0.500000</td>\n",
+       "      <td>73.750000</td>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>67.000000</td>\n",
+       "      <td>33.000000</td>\n",
+       "      <td>33.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>21.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>79.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>71.750000</td>\n",
+       "      <td>37.000000</td>\n",
+       "      <td>37.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>41.750000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>33.000000</td>\n",
+       "      <td>2.250000</td>\n",
+       "      <td>79.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>95.000000</td>\n",
+       "      <td>51.000000</td>\n",
+       "      <td>51.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       move_number  material_balance  material_total  num_pieces  \\\n",
+       "count    94.000000         94.000000       94.000000   94.000000   \n",
+       "mean     13.978723         -0.888298       71.771277   12.340426   \n",
+       "std       9.190901          1.806357        7.886089    1.920759   \n",
+       "min       1.000000         -9.250000       52.250000    8.000000   \n",
+       "25%       6.250000         -1.250000       66.500000   11.000000   \n",
+       "50%      12.000000         -0.500000       73.750000   13.000000   \n",
+       "75%      21.000000          0.000000       79.000000   14.000000   \n",
+       "max      33.000000          2.250000       79.000000   14.000000   \n",
+       "\n",
+       "       branching_factor  self_mobility  opponent_mobility  player_color  \\\n",
+       "count         94.000000      94.000000          94.000000     94.000000   \n",
+       "mean          63.968085      31.819149          32.148936      0.510638   \n",
+       "std           13.131635      10.240089          10.103717      0.502567   \n",
+       "min           27.000000       3.000000           3.000000      0.000000   \n",
+       "25%           59.000000      29.000000          30.000000      0.000000   \n",
+       "50%           67.000000      33.000000          33.500000      1.000000   \n",
+       "75%           71.750000      37.000000          37.000000      1.000000   \n",
+       "max           95.000000      51.000000          51.000000      1.000000   \n",
+       "\n",
+       "       has_castling_rights  move_number_global  is_repetition  \\\n",
+       "count            94.000000           94.000000           94.0   \n",
+       "mean              0.585106           27.446809            0.0   \n",
+       "std               0.495346           18.376947            0.0   \n",
+       "min               0.000000            1.000000            0.0   \n",
+       "25%               0.000000           12.250000            0.0   \n",
+       "50%               1.000000           24.000000            0.0   \n",
+       "75%               1.000000           41.750000            0.0   \n",
+       "max               1.000000           65.000000            0.0   \n",
+       "\n",
+       "       is_low_mobility  tags  score_diff  \n",
+       "count         94.00000   0.0         0.0  \n",
+       "mean           0.06383   NaN         NaN  \n",
+       "std            0.24576   NaN         NaN  \n",
+       "min            0.00000   NaN         NaN  \n",
+       "25%            0.00000   NaN         NaN  \n",
+       "50%            0.00000   NaN         NaN  \n",
+       "75%            0.00000   NaN         NaN  \n",
+       "max            1.00000   NaN         NaN  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "import pandas as pd\n",
@@ -97,8 +291,10 @@
     "import seaborn as sns\n",
     "\n",
     "# Cargar dataset\n",
-    "df = pd.read_csv('training_dataset.csv')\n",
-    "df.head()\n"
+    "df = pd.read_csv('/app/src/data/training_dataset.csv')\n",
+    "#df.head()\n",
+    "\n",
+    "df.describe()\n"
    ]
   },
   {
@@ -281,8 +477,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
