--- a/notebooks/eda_feedback_v2.ipynb
+++ b/notebooks/eda_feedback_v2.ipynb
@@ -21,15 +21,25 @@
    "execution_count": null,
    "id": "d07e1f1b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "La variable de entorno 'TRAINING_DATA_PATH' no está definida.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      7\u001b[39m TRANING_DATA_PATH = os.environ.get(\u001b[33m\"\u001b[39m\u001b[33mTRAINING_DATA_PATH\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m TRANING_DATA_PATH:\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mLa variable de entorno \u001b[39m\u001b[33m'\u001b[39m\u001b[33mTRAINING_DATA_PATH\u001b[39m\u001b[33m'\u001b[39m\u001b[33m no está definida.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os.path.exists(TRANING_DATA_PATH):\n\u001b[32m     13\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mLa ruta especificada \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mTRANING_DATA_PATH\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m no existe.\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mValueError\u001b[39m: La variable de entorno 'TRAINING_DATA_PATH' no está definida."
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import os\n",
     "from validators.validation_schema import validate_training_dataset\n",
-    "import dotenv\n",
-    "dotenv.load_dotenv()\n",
     "\n",
-    "TRANING_DATA_PATH = os.getenv(\"TRAINING_DATA_PATH\")\n",
+    "TRANING_DATA_PATH = \"/app/src/data/training_data.csv\"\n",
     "\n",
     "if not TRANING_DATA_PATH:\n",
     "    raise ValueError(\"La variable de entorno 'TRAINING_DATA_PATH' no está definida.\")\n",
@@ -55,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ba5bafd9",
    "metadata": {},
    "outputs": [
@@ -279,7 +289,7 @@
        "max            1.00000   NaN         NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
