Soporte para generate_features y analysis_tacticals resuelto

--- a/notebooks/testings.ipynb
+++ b/notebooks/testings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "7def9387",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
     "import dotenv\n",
     "env = dotenv.load_dotenv()\n",
     "\n",
-    "STOCKFISH_PATH = os.environ.get(\"STOCKFISH_PATH\",\"/usr/games/stockfish\")\n",
+    "STOCKFISH_PATH = os.environ.get(\"STOCKFISH_PATH\",\"/usr/local/bin’\")\n",
     "\n",
     "with chess.engine.SimpleEngine.popen_uci(STOCKFISH_PATH) as engine:\n",
     "    board = chess.Board(\"rnbqkb1r/pppp2pp/5n2/4pP2/8/5N2/PPPP1PPP/RNBQKB1R w KQkq - 1 4\")\n",
