Scripts para generar issues,para exportar features a formato parquet y notebook basico de eda

--- a/notebooks/ml_training.ipynb
+++ b/notebooks/ml_training.ipynb
@@ -1,6 +1,162 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "41976788",
+   "metadata": {},
+   "source": [
+    "# Análisis de historial de predicciones tácticas (`predicciones.csv`)\n",
+    "\n",
+    "Este notebook explora el historial generado por el modelo de predicción de errores tácticos en `chess_trainer`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bab6626a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "df = pd.read_csv(\"../data/predicciones.csv\")\n",
+    "df[\"timestamp\"] = pd.to_datetime(df[\"timestamp\"])\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dadb08b2",
+   "metadata": {},
+   "source": [
+    "## Frecuencia de etiquetas tácticas predichas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b9c5782",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.countplot(data=df, x=\"predicted_label\", order=df[\"predicted_label\"].value_counts().index)\n",
+    "plt.title(\"Distribución de etiquetas tácticas\")\n",
+    "plt.xticks(rotation=30)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5abbd088",
+   "metadata": {},
+   "source": [
+    "## Evolución temporal por etiqueta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46f8d8ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "etiquetas_por_fecha = df.groupby(df[\"timestamp\"].dt.date)[\"predicted_label\"].value_counts().unstack().fillna(0)\n",
+    "etiquetas_por_fecha.plot(kind=\"bar\", stacked=True, figsize=(12, 6))\n",
+    "plt.title(\"Etiquetas tácticas por día\")\n",
+    "plt.xlabel(\"Fecha\")\n",
+    "plt.ylabel(\"Cantidad\")\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f301bb4d",
+   "metadata": {},
+   "source": [
+    "## Boxplot de score_diff por etiqueta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4313ad66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.boxplot(data=df, x=\"predicted_label\", y=\"score_diff\")\n",
+    "plt.title(\"score_diff por tipo de error predicho\")\n",
+    "plt.xticks(rotation=30)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c4efd73",
+   "metadata": {},
+   "source": [
+    "## Histograma de branching_factor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2309096f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.histplot(data=df, x=\"branching_factor\", bins=20, kde=True)\n",
+    "plt.title(\"Distribución del branching_factor\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4a89baa",
+   "metadata": {},
+   "source": [
+    "## Correlaciones numéricas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03b60d80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corr = df.corr(numeric_only=True)\n",
+    "sns.heatmap(corr, annot=True, cmap=\"coolwarm\")\n",
+    "plt.title(\"Mapa de calor de correlaciones\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0903e803",
+   "metadata": {},
+   "source": [
+    "## Conclusiones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50de6c6a",
+   "metadata": {},
+   "source": [
+    "- Se observan más errores graves (score_diff negativos) en jugadas con menor branching_factor.\n",
+    "- Las etiquetas tácticas más frecuentes son las intermedias como 'Error' o 'Aceptable'.\n",
+    "- Hay estabilidad en la distribución temporal, aunque algunos días muestran concentración de errores impulsivos.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8a4612da",
@@ -773,13 +929,251 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "396a8580",
+   "metadata": {},
+   "source": [
+    "# Modelo Supervisado para Predecir error_label\n",
+    "Este notebook entrena un modelo de clasificación para predecir el tipo de error cometido en una jugada de ajedrez usando los features generados en `training_dataset.csv`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "718802c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Cargar el dataset\n",
+    "df = pd.read_csv(\"training_dataset.csv\")\n",
+    "\n",
+    "# Inspección inicial\n",
+    "print(df.shape)\n",
+    "print(df.columns)\n",
+    "print(df['error_label'].value_counts())\n",
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "766c63f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Selección de features\n",
+    "features = [\n",
+    "    'score_diff', 'material_total', 'material_balance', 'num_pieces',\n",
+    "    'branching_factor', 'self_mobility', 'opponent_mobility',\n",
+    "    'phase', 'has_castling_rights', 'is_low_mobility', \n",
+    "    'is_center_controlled', 'is_pawn_endgame'\n",
+    "]\n",
+    "\n",
+    "X = df[features]\n",
+    "y = df['error_label']\n",
+    "\n",
+    "# División de datos\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec79c89f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "\n",
+    "# Entrenamiento\n",
+    "clf = DecisionTreeClassifier(max_depth=5, random_state=42)\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "# Evaluación\n",
+    "y_pred = clf.predict(X_test)\n",
+    "print(confusion_matrix(y_test, y_pred))\n",
+    "print(classification_report(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "496d50cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "# Guardar el modelo entrenado\n",
+    "joblib.dump(clf, 'trained_error_label_model.pkl')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8390ca9",
+   "metadata": {},
+   "source": [
+    "## Comparación con otros modelos (opcional)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f11b4822",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "models = {\n",
+    "    \"Decision Tree\": DecisionTreeClassifier(max_depth=5),\n",
+    "    \"Random Forest\": RandomForestClassifier(n_estimators=100),\n",
+    "    \"Logistic Regression\": LogisticRegression(max_iter=1000)\n",
+    "}\n",
+    "\n",
+    "for name, model in models.items():\n",
+    "    scores = cross_val_score(model, X, y, cv=5)\n",
+    "    print(f\"{name} accuracy: {scores.mean():.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ae02b75",
+   "metadata": {},
+   "source": [
+    "# PCA + Clustering en Partidas de Ajedrez\n",
+    "Este notebook aplica PCA a posiciones vectorizadas y agrupa los errores en clusters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15fde1f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'src'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mos\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# Ensure the 'src' directory exists and is correctly added to the Python path\u001b[39;00m\n\u001b[32m      6\u001b[39m src_path = os.path.abspath(\u001b[33m'\u001b[39m\u001b[33msrc\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'src'"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "import numpy as np\n",
+    "# Ensure the 'src' directory exists and is correctly added to the Python path\n",
+    "src_path = os.path.abspath('src')\n",
+    "if os.path.exists(src_path) and src_path not in sys.path:\n",
+    "    sys.path.append(src_path)\n",
+    "from src.extractor import extract_features_from_fen\n",
+    "from src.reducer import apply_pca\n",
+    "from src.cluster import cluster_points\n",
+    "from src.utils import load_pgn_positions\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Ensure the 'src' directory is in the Python path\n",
+    "sys.path.append(os.path.abspath('src'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65fbbccc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cargar posiciones\n",
+    "fens = load_pgn_positions('data/game.png')\n",
+    "X = np.array([extract_features_from_fen(f) for f in fens])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8db1737c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Aplicar PCA\n",
+    "pca, Z = apply_pca(X, n_components=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3ca3fec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clustering\n",
+    "labels, model = cluster_points(Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "087d38bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualización\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "plt.scatter(Z[:, 0], Z[:, 1], c=labels, cmap='viridis', s=30)\n",
+    "plt.title('Clusters de posiciones en PCA')\n",
+    "plt.xlabel('PC1')\n",
+    "plt.ylabel('PC2')\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7def9387",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "PovScore(Cp(+118), WHITE) PovScore(Cp(+105), WHITE) PovScore(Cp(+91), WHITE)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import chess\n",
+    "import chess.engine\n",
+    "import dotenv\n",
+    "env = dotenv.load_dotenv()\n",
+    "\n",
+    "STOCKFISH_PATH = os.environ.get(\"STOCKFISH_PATH\",\"/usr/local/bin’\")\n",
+    "\n",
+    "with chess.engine.SimpleEngine.popen_uci(STOCKFISH_PATH) as engine:\n",
+    "    board = chess.Board(\"rnbqkb1r/pppp2pp/5n2/4pP2/8/5N2/PPPP1PPP/RNBQKB1R w KQkq - 1 4\")\n",
+    "    info = engine.analyse(board, chess.engine.Limit(depth=10), multipv=3)\n",
+    "    print(type(info))  # → <class 'list'>\n",
+    "    print(info[0][\"score\"], info[1][\"score\"], info[2][\"score\"])"
+   ]
   }
  ],
- "metadata": {
-  "language_info": {
-   "name": "python"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 5
 }
