--- a/notebooks/eda_analysis.ipynb
+++ b/notebooks/eda_analysis.ipynb
@@ -14,143 +14,19 @@
    "id": "9c6d3406",
    "metadata": {},
    "source": [
-    "## Generar un dataset de prueba."
+    "## Cargar el dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "43f54c5c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/engine/base.py\", line 146, in __init__\n",
-      "    self._dbapi_connection = engine.raw_connection()\n",
-      "                             ^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/engine/base.py\", line 3302, in raw_connection\n",
-      "    return self.pool.connect()\n",
-      "           ^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/pool/base.py\", line 449, in connect\n",
-      "    return _ConnectionFairy._checkout(self)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/pool/base.py\", line 1263, in _checkout\n",
-      "    fairy = _ConnectionRecord.checkout(pool)\n",
-      "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/pool/base.py\", line 712, in checkout\n",
-      "    rec = pool._do_get()\n",
-      "          ^^^^^^^^^^^^^^\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/pool/impl.py\", line 179, in _do_get\n",
-      "    with util.safe_reraise():\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/util/langhelpers.py\", line 146, in __exit__\n",
-      "    raise exc_value.with_traceback(exc_tb)\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/pool/impl.py\", line 177, in _do_get\n",
-      "    return self._create_connection()\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/pool/base.py\", line 390, in _create_connection\n",
-      "    return _ConnectionRecord(self)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/pool/base.py\", line 674, in __init__\n",
-      "    self.__connect()\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/pool/base.py\", line 900, in __connect\n",
-      "    with util.safe_reraise():\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/util/langhelpers.py\", line 146, in __exit__\n",
-      "    raise exc_value.with_traceback(exc_tb)\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/pool/base.py\", line 896, in __connect\n",
-      "    self.dbapi_connection = connection = pool._invoke_creator(self)\n",
-      "                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/engine/create.py\", line 643, in connect\n",
-      "    return dialect.connect(*cargs, **cparams)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/engine/default.py\", line 621, in connect\n",
-      "    return self.loaded_dbapi.connect(*cargs, **cparams)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/psycopg2/__init__.py\", line 122, in connect\n",
-      "    conn = _connect(dsn, connection_factory=connection_factory, **kwasync)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "psycopg2.OperationalError: connection to server at \"postgres\" (172.18.0.2), port 5432 failed: FATAL:  password authentication failed for user \"user\"\n",
-      "\n",
-      "\n",
-      "The above exception was the direct cause of the following exception:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/app/src/scripts/export_features_dataset.py\", line 1, in <module>\n",
-      "    from services.feature_export_services import export_features_to_parquet\n",
-      "  File \"/app/src/services/feature_export_services.py\", line 4, in <module>\n",
-      "    from db.repository.features_repository import FeaturesRepository\n",
-      "  File \"/app/src/db/repository/features_repository.py\", line 9, in <module>\n",
-      "    from db.models.features import Features\n",
-      "  File \"/app/src/db/models/__init__.py\", line 1, in <module>\n",
-      "    from db.database import Base\n",
-      "  File \"/app/src/db/database.py\", line 12, in <module>\n",
-      "    with engine.connect() as conn:\n",
-      "         ^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/engine/base.py\", line 3278, in connect\n",
-      "    return self._connection_cls(self)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/engine/base.py\", line 148, in __init__\n",
-      "    Connection._handle_dbapi_exception_noconnection(\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/engine/base.py\", line 2442, in _handle_dbapi_exception_noconnection\n",
-      "    raise sqlalchemy_exception.with_traceback(exc_info[2]) from e\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/engine/base.py\", line 146, in __init__\n",
-      "    self._dbapi_connection = engine.raw_connection()\n",
-      "                             ^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/engine/base.py\", line 3302, in raw_connection\n",
-      "    return self.pool.connect()\n",
-      "           ^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/pool/base.py\", line 449, in connect\n",
-      "    return _ConnectionFairy._checkout(self)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/pool/base.py\", line 1263, in _checkout\n",
-      "    fairy = _ConnectionRecord.checkout(pool)\n",
-      "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/pool/base.py\", line 712, in checkout\n",
-      "    rec = pool._do_get()\n",
-      "          ^^^^^^^^^^^^^^\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/pool/impl.py\", line 179, in _do_get\n",
-      "    with util.safe_reraise():\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/util/langhelpers.py\", line 146, in __exit__\n",
-      "    raise exc_value.with_traceback(exc_tb)\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/pool/impl.py\", line 177, in _do_get\n",
-      "    return self._create_connection()\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/pool/base.py\", line 390, in _create_connection\n",
-      "    return _ConnectionRecord(self)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/pool/base.py\", line 674, in __init__\n",
-      "    self.__connect()\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/pool/base.py\", line 900, in __connect\n",
-      "    with util.safe_reraise():\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/util/langhelpers.py\", line 146, in __exit__\n",
-      "    raise exc_value.with_traceback(exc_tb)\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/pool/base.py\", line 896, in __connect\n",
-      "    self.dbapi_connection = connection = pool._invoke_creator(self)\n",
-      "                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/engine/create.py\", line 643, in connect\n",
-      "    return dialect.connect(*cargs, **cparams)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/sqlalchemy/engine/default.py\", line 621, in connect\n",
-      "    return self.loaded_dbapi.connect(*cargs, **cparams)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/local/lib/python3.11/site-packages/psycopg2/__init__.py\", line 122, in connect\n",
-      "    conn = _connect(dsn, connection_factory=connection_factory, **kwasync)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "sqlalchemy.exc.OperationalError: (psycopg2.OperationalError) connection to server at \"postgres\" (172.18.0.2), port 5432 failed: FATAL:  password authentication failed for user \"user\"\n",
-      "\n",
-      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Para exportar todo\n",
-    "# !python /app/src/scripts/export_features_dataset.py\n",
+    "import pandas as pd\n",
     "\n",
-    "#Para exportar 300 partidas del jugador cmess1315 en la Defensa Francesa, elo 1300 a 1500:\n",
-    "!python /app/src/scripts/export_features_dataset.py --elo_min 1300 --elo_max 1500 --player cmess1315 --opening francesa --limit 300\n",
-    "\n"
+    "df = pd.read_parquet(\"data/export/features_dataset.parquet\")\n"
    ]
   },
   {
